--- a/_articles/2020-05-06-xinran.md
+++ b/_articles/2020-05-06-xinran.md
@@ -3,6 +3,11 @@ title: "写给欣然"
 date: 2020-05-06 09:00:25 +0800
 categories: Films 影评 大象席地而坐
 position: blog
+layout: xinran
+---
+
+Private
+
 ---
 
 我幻想过无数次
