--- a/_articles/2020-05-06-xinran.md
+++ b/_articles/2020-05-06-xinran.md
@@ -1,12 +1,12 @@
 ---
 title: "写给欣然"
 date: 2020-05-06 09:00:25 +0800
-categories: Films 影评 大象席地而坐
+categories: xinran
 position: blog
 layout: xinran
 ---
 
-Private
+
 
 ---
 
@@ -15,6 +15,8 @@ Private
 回到那个夏天
 
 那个炙热的夏天
+
+![blank](/assets/img/placeholder.png)
 
 我幻想过无数次  
 
