--- a/_articles/2020-05-06-xinran.md
+++ b/_articles/2020-05-06-xinran.md
@@ -11,10 +11,11 @@ layout: xinran
 <audio controls="controls">
     <source src="http://music.163.com/song/media/outer/url?id=1409370633.mp3" type="audio/ogg">
     <source src="http://music.163.com/song/media/outer/url?id=1409370633.mp3" type="audio/mpeg">
-<embed height="100" width="300" src="http://music.163.com/song/media/outer/url?id=1409370633.mp3" />
+<embed height="50" width="500" src="http://music.163.com/song/media/outer/url?id=1409370633.mp3" />
 </audio>
-* listen to this decent song. plz~~
+*listen to this decent song. plz~~*
 
+![blank](/assets/img/placeholder.png)
 我幻想过无数次
 
 回到那个夏天
@@ -32,3 +33,4 @@ layout: xinran
 繁星漫天的
 
 摇曳的夏夜
+![blank](/assets/img/placeholder.png)
