--- a/_articles/2020-05-11-xinran_20_5_11.md
+++ b/_articles/2020-05-11-xinran_20_5_11.md
@@ -13,69 +13,72 @@ layout: xinran
     <source src="http://music.163.com/song/media/outer/url?id=464647435.mp3" type="audio/mpeg">
 <embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=464647435.mp3" />
 </audio>
+
 *listen to this decent song. plz~~*
 
-* I love the sun on a warm winter day
 
-* I love the grass in the early spring
 
-* I love the yard afternoon and the swing standing there
+I love the sun on a warm winter day
 
-* I love the ice of mid-summer
+I love the grass in the early spring
 
-* I love the moon in a cool autumn night
+I love the yard afternoon and the swing standing there
 
-    where there is a lovely starry sky
+I love the ice of mid-summer
 
-* I love the frog after a rain
+I love the moon in a cool autumn night
 
-* I love the Apricot blossom on the hill
+​	where there is a lovely starry sky
 
-* I love the aquarium on the Wednesday evening
+I love the frog after a rain
 
-    where sunset is glowing
+I love the Apricot blossom on the hill
 
-* I love the ducks in a crowd way
+I love the aquarium on the Wednesday evening
 
-* I love the messy shelf
+​	where sunset is glowing
 
-* with a windy deck to see the lights faraway
+I love the ducks in a crowd way
 
-* I love to walk alone on the 69th Road
+I love the messy shelf
 
-* I love Kimura Takuya's long blondy hair
+​	with a windy deck to see the lights faraway
 
-* I love the deer free running on the field
+I love to walk alone on the 69th Road
 
-* I love the banyan tree in front of my grandma's door
+I love Kimura Takuya's long blondy hair
 
-* I love the bento made by my mother
+I love the deer free running on the field
 
-* I love the Stubble on my father's face
+I love the banyan tree in front of my grandma's door
 
-* I love the playground running late in a August night
+I love the bento made by my mother
 
-* I love the ring of class over
+I love the Stubble on my father's face
 
-* I love the blackout night
+I love the playground running late in a August night
 
-* with a pair of candles standing in the entrance of my house
+I love the ring of class over
 
-* I love the way the mountain is
+I love the blackout night
 
-    far away from my sight reaches
+​	with a pair of candles standing in the entrance of my house
 
-* I love the ballon flying to the west of the sky
+I love the way the mountain is
 
-* I love to step on the stone road in the morning
+​	far away from my sight reaches
 
-* passing by a crowded breakfast stand with grandpa's osmanthus cake
+I love the ballon flying to the west of the sky
 
-* I love the way the cloud fading in the sky
-and the tree greening as it is
+I love to step on the stone road in the morning
 
-* The final thing I love is
+​	passing by a crowded breakfast stand with grandpa's osmanthus cake
 
-* And the final thing you should know is that
+I love the way the cloud fading in the sky
+	and the tree greening as it is
 
-    I love you.
+The final thing I love is
+
+And the final thing you should know is that
+
+​	I love you.
