--- a/_articles/2020-05-23-xinran_20_5_23.md
+++ b/_articles/2020-05-23-xinran_20_5_23.md
@@ -1,9 +1,9 @@
 ---
 title: "写给欣然"
 date: 2020-05-23 21:04:25 +0800
-categories: xinran
-position: blog
-layout: xinran
+# categories: xinran
+# position: blog
+layout: private
 ---
 
 ---
