--- a/_articles/2020-05-23-xinran_20_5_23.md
+++ b/_articles/2020-05-23-xinran_20_5_23.md
@@ -4,6 +4,8 @@ date: 2020-05-23 21:04:25 +0800
 # categories: xinran
 # position: blog
 layout: private
+author:     Jiayi
+header-img: assets/img/private/background.jpg
 ---
 
 ---
