--- a/_articles/2020-05-11-xinran_20_5_11.md
+++ b/_articles/2020-05-11-xinran_20_5_11.md
@@ -16,7 +16,7 @@ layout: xinran
 </ul>
 *listen to this decent song. plz~~*
 
-
+![blank](/assets/img/placeholder.png)
 
 I love the sun on a warm winter day
 
@@ -28,7 +28,7 @@ I love the ice of mid-summer
 
 I love the moon in a cool autumn night
 
-​	where there is a lovely starry sky
+    where there is a lovely starry sky
 
 I love the frog after a rain
 
@@ -36,13 +36,13 @@ I love the Apricot blossom on the hill
 
 I love the aquarium on the Wednesday evening
 
-​	where sunset is glowing
+    where sunset is glowing
 
 I love the ducks in a crowd way
 
 I love the messy shelf
 
-​	with a windy deck to see the lights faraway
+    with a windy deck to see the lights faraway
 
 I love to walk alone on the 69th Road
 
@@ -62,23 +62,23 @@ I love the ring of class over
 
 I love the blackout night
 
-​	with a pair of candles standing in the entrance of my house
+    with a pair of candles standing in the entrance of my house
 
 I love the way the mountain is
 
-​	far away from my sight reaches
+    far away from my sight reaches
 
 I love the ballon flying to the west of the sky
 
 I love to step on the stone road in the morning
 
-​	passing by a crowded breakfast stand with grandpa's osmanthus cake
+    passing by a crowded breakfast stand with grandpa's osmanthus cake
 
 I love the way the cloud fading in the sky
-	and the tree greening as it is
+    and the tree greening as it is
 
 The final thing I love is
 
 And the final thing you should know is that
 
-​	I love you.
+    I love you.
