--- a/_articles/2020-05-23-xinran_20_5_23.md
+++ b/_articles/2020-05-23-xinran_20_5_23.md
@@ -1,11 +1,9 @@
 ---
 title: "写给欣然"
 date: 2020-05-23 21:04:25 +0800
-# categories: xinran
-# position: blog
-layout: private
-author:     Jiayi
-header-img: assets/img/private/background.jpg
+categories: xinran
+position: blog
+layout: xinran
 ---
 
 ---
@@ -19,7 +17,7 @@ header-img: assets/img/private/background.jpg
 </ul>
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
-
+![blank](/assets/img/placeholder.png)
 
 不好意思吼 昨天晚上又做了噩梦
 
@@ -34,3 +32,5 @@ header-img: assets/img/private/background.jpg
 那天看到林惠阳的消息 第一时间想到 要赶紧告诉你 谨防被骗
 
 已经是你的爸爸粉了吧大概 生怕你出什么乱子
+
+![blank](/assets/img/placeholder.png)
