update private articles

--- a/_articles/2020-05-27-xinran_20_5_27_2.md
+++ b/_articles/2020-05-27-xinran_20_5_27_2.md
@@ -25,19 +25,19 @@ layout: xinran
 
 ![blank](/assets/img/placeholder.png)
 
-可能是因为纬度高 又在高原地区
+可能是纬度高，又在高原地区的缘故
 
 呼和浩特的落日是我见过
 
-最好看 最独特的落日
+最好看最独特的落日
 
-夏天的落日从六点开始 可以一直持续到九点
+夏天的落日从六点开始，可以一直持续到九点
 
 蓝蓝的天空会慢慢泛白
 
 不一会儿浅浅的白蓝色又开始变黄
 
-地平线处的颜色黄得最快 头顶上的天空还是蓝色
+地平线处的颜色黄得最快，在头顶上的天空还是蓝色的时候
 
 而两者之间 就像是
 
@@ -45,33 +45,39 @@ layout: xinran
 
 光的渐变
 
-蓝色 粉色 淡紫色 紫罗兰 甚至能到胭脂红那样的深红 大红
+蓝色、粉色、淡紫色、紫罗兰，甚至有胭脂红那样的深红、大红
 
-可红得远比胭脂红让人爱恋
+却红得远比胭脂红让人爱恋
 
-红色落去 便剩下黄色的余晖
+红色落去，剩下黄色的余晖
 
-这时候再抬起头看天空 已经是深蓝一片
+这时候抬起头来，已经是深蓝一片
 
-再放平视线远眺青山 是耀眼的紫色
+再放平视线远眺青山，是耀眼的紫色
 
-紫色是很高贵的颜色 穿在人身上往往不能显示其魅力
+紫色是很高贵的颜色。
 
-但笼罩在城市尽头的紫色 像是什么呢
+浅紫淡雅，深紫惊艳
 
-像是我们小时候大家都喜欢的那个女生
+但笼罩在城市尽头的紫色，像是什么呢
 
-不 不像是小时候的那个女生
+像是小时候大家都喜欢的那个女生
 
-像是长大了 你第一次爱上的那个女生
+不，不像是那个女生
+
+像是长大了，第一次爱上的那个女生
 
 就是那样的紫色
 
-发呆的一瞬 再抬头已经是八点的尽头
+发呆的一瞬，再抬头居然到了八点的尽头
 
-不像是深夜的黑 而是静谧的蓝
+是深夜的黑，是静谧的蓝。
 
-远方的山脉似乎泛着薄薄微光 似乎又没有
+![blank](/assets/img/placeholder.png)
+
+远方的山脉似乎泛着薄薄微光，
+
+似乎又没有。
 
 ![blank](/assets/img/placeholder.png)
 
