--- a/_articles/2020-05-31-xinran_20_5_31.md
+++ b/_articles/2020-05-31-xinran_20_5_31.md
@@ -15,7 +15,7 @@ layout: xinran
     allowfullscreen>
 </iframe>
 
-{% include youtube.html id=page.VpwAq7hiij0 %}
+{% include youtube.html id="page.VpwAq7hiij0" %}
 
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 75%;">
     <iframe src="//player.bilibili.com/player.html?aid=46303362&cid=81124889&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;">
