--- a/_articles/2020-05-31-xinran_20_5_31.md
+++ b/_articles/2020-05-31-xinran_20_5_31.md
@@ -17,8 +17,8 @@ layout: xinran
 
 <!-- {% include youtube.html id="VpwAq7hiij0" %} -->
 
-<iframe src="//player.bilibili.com/player.html?aid=46303362&cid=81124889&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;">
-</iframe>
+<!-- <iframe src="//player.bilibili.com/player.html?aid=46303362&cid=81124889&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;">
+</iframe> -->
 
 
 
