--- a/_articles/2020-05-31-xinran_20_5_31.md
+++ b/_articles/2020-05-31-xinran_20_5_31.md
@@ -15,12 +15,14 @@ layout: xinran
     allowfullscreen>
 </iframe>
 
-<iframe src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
-scrolling="no" border="0" 
-frameborder="no" 
-framespacing="0" 
-allowfullscreen="true"> 
-</iframe>
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 75%;">
+    <iframe src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
+    scrolling="no" border="0" 
+    frameborder="no" 
+    framespacing="0" 
+    allowfullscreen="true"> 
+    </iframe>
+</div>
 
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
