test bilibili videos

--- a/_articles/2020-05-31-xinran_20_5_31.md
+++ b/_articles/2020-05-31-xinran_20_5_31.md
@@ -8,12 +8,12 @@ layout: xinran
 
 ---
 
-<iframe src="https://www.youtube.com/embed/VpwAq7hiij0" 
+<!-- <iframe src="https://www.youtube.com/embed/VpwAq7hiij0" 
     width="560" 
     height="560"
     frameborder="0" 
     allowfullscreen>
-</iframe>
+</iframe> -->
 
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 75%;">
     <iframe src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
