--- a/_articles/2020-05-31-xinran_20_5_31.md
+++ b/_articles/2020-05-31-xinran_20_5_31.md
@@ -15,11 +15,9 @@ layout: xinran
     allowfullscreen>
 </iframe> -->
 
-<div style="position: relative; width: 100%; height: 0; padding-bottom: 75%;">
-    <iframe src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
-    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;"> 
-    </iframe>
-</div>
+<iframe idth="640" height="480" src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
+scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> 
+</iframe>
 
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
