--- a/_articles/2020-06-12-xinran_20_6_12.md
+++ b/_articles/2020-06-12-xinran_20_6_12.md
@@ -19,10 +19,15 @@ layout: xinran
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
 > 你知道宇宙为什么会大到无法估量吗
+>
 > 是因为在为我们准备位置
+>
 > 因为不能永远停留在恒星上
+>
 > 等到了规定的时间 就会移居到那里
+>
 > 我们
+>
 > 在那里见吧 ——《浪漫的体质》
 
 ![blank](/assets/img/placeholder.png)
@@ -45,7 +50,7 @@ Frau Fu 昨天和我讲她有多么想念前男友
 
 但是我也真的好傻逼啊，我复盘了无数次，似乎所有决定都是最坏最差的决定。
 
-![blank](assets/img/placeholder.png)
+![blank](/assets/img/placeholder.png)
 
 ![来去](https://raw.githubusercontent.com/SHIELDJY/ImgRepo/master/_DSC2659-1.jpg)
 
