--- a/_articles/2020-05-31-xinran_20_5_31.md
+++ b/_articles/2020-05-31-xinran_20_5_31.md
@@ -1,5 +1,5 @@
 ---
-title: "写给欣然"
+title: "写给欣然——分享一个MV"
 date: 2020-05-31 10:57:25
 categories: xinran
 position: blog
@@ -16,7 +16,7 @@ layout: xinran
 </iframe>
 （如果你可以用歪屁嗯的话）
 
-<iframe idth="640" height="360" src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
+<iframe idth="640" height="720" src="//player.bilibili.com/player.html?aid=625621472&bvid=BV1xt4y117yu&cid=189210021&page=1" 
 scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> 
 </iframe>
 
@@ -55,4 +55,3 @@ scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="tru
 ![blank](/assets/img/placeholder.png)
 
 ![blank](/assets/img/placeholder.png)
-
