--- a/_articles/2020-06-12-xinran_20_6_12.md
+++ b/_articles/2020-06-12-xinran_20_6_12.md
@@ -1,5 +1,5 @@
 ---
-title: "写给欣然"
+title: "写给欣然——琐事第三则"
 date: 2020-06-12 16:22:25
 categories: xinran
 position: blog
@@ -16,6 +16,7 @@ layout: xinran
 </audio>
 </ul>
 *岛—椅子乐团*
+
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
 > 你知道宇宙为什么会大到无法估量吗
