--- a/_articles/2020-06-21-xinran_20_6_21.md
+++ b/_articles/2020-06-21-xinran_20_6_21.md
@@ -1,5 +1,5 @@
 ---
-title: "写给欣然"
+title: "写给欣然——写在日环食这天"
 date: 2020-06-21 16:58:25
 categories: xinran
 position: blog
@@ -16,6 +16,7 @@ layout: xinran
 </audio>
 </ul>
 *夏夜晚风—伍佰*
+
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
 ![blank](/assets/img/placeholder.png)
