--- a/_articles/2020-06-25-xinran_20_6_25.md
+++ b/_articles/2020-06-25-xinran_20_6_25.md
@@ -1,5 +1,5 @@
 ---
-title: "写给欣然"
+title: "写给欣然——祝你生日快乐"
 date: 2020-06-25 00:00:00
 categories: xinran
 position: blog
@@ -10,13 +10,12 @@ layout: xinran
 
 <ul class="list-inline text-center">
 <audio controls="controls">
-    <source src="http://music.163.com/song/media/outer/url?id=1413368107.mp3" type="audio/ogg">
-    <source src="http://music.163.com/song/media/outer/url?id=1413368107.mp3" type="audio/mpeg">
-<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=1413368107.mp3" />
+    <source src="http://music.163.com/song/media/outer/url?id=514765420.mp3" type="audio/ogg">
+    <source src="http://music.163.com/song/media/outer/url?id=514765420.mp3" type="audio/mpeg">
+<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=514765420.mp3" />
 </audio>
 </ul>
-
-*傍晚去太子湾吗——Schoolgirl byebye*
+*生日快乐—丢火车*
 
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
