--- a/_articles/2020-08-27-xinran_20_8_27.md
+++ b/_articles/2020-08-27-xinran_20_8_27.md
@@ -1,5 +1,5 @@
 ---
-title: "写给欣然"
+title: "写给欣然—又回嘉定的杂想"
 date: 2020-08-27 15:25:25
 categories: xinran
 position: blog
@@ -15,8 +15,7 @@ layout: xinran
 <embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=1413368107.mp3" />
 </audio>
 </ul>
-
-*傍晚去太子湾吗——Schoolgirl byebye*
+*傍晚去太子湾吗—Schoolgirl byebye*
 
 *ich bin a decent song for you. plz take your time and listen to me~~*
 
