update source of music

--- a/_articles/2020-08-30-xinran_20_8_30.md
+++ b/_articles/2020-08-30-xinran_20_8_30.md
@@ -10,9 +10,9 @@ layout: xinran
 
 <ul class="list-inline text-center">
 <audio controls="controls">
-    <source src="http://music.163.com/song/media/outer/url?id=3377675.mp3" type="audio/ogg">
-    <source src="http://music.163.com/song/media/outer/url?id=3377675.mp3" type="audio/mpeg">
-<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=3377675.mp3" />
+    <source src="http://music.163.com/song/media/outer/url?id=28059104.mp3" type="audio/ogg">
+    <source src="http://music.163.com/song/media/outer/url?id=28059104.mp3" type="audio/mpeg">
+<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=28059104.mp3" />
 </audio>
 </ul>
 *My Favorite Things—Maria*
@@ -43,4 +43,4 @@ layout: xinran
 
 银白的冰雪之冬融化成春的生机
 
-![blank](assets/img/placeholder.png)
+![blank](/assets/img/placeholder.png)
