--- a/_articles/2021-01-25-写给付大侠.md
+++ b/_articles/2021-01-25-写给付大侠.md
@@ -23,7 +23,9 @@ tags: mind
 
 第一日是李安先生的《饮食男女》。李安导演对于传统中式家庭在新潮流冲击下而衍生的台湾家庭关系有十分独特的视角。第一幕井井有条看似蒸蒸日上到最后一幕满目疮痍看似支离破碎，令人惊奇。
 
-第二日是李安先生的《推手》。片子应该是好片子，但是我看了480P没有字幕的版本，其中一半以上的对话都是含糊不清的中式英文与嘶吼的争吵，实在让人费解。就像是片中洋媳妇与老爷子的对话“-Can you understand me?”“-我就是出去走走”一样，大抵也是李安导演与观众的交流。
+第二日是李安先生的《推手》。片子应该是好片子，但是我看了480P没有字幕的版本，其中一半以上的对话都是含糊不清的中式英文与嘶吼的争吵，实在让人费解。就像是片中洋媳妇与老爷子的对话一样，大抵也是李安导演与观众的交流。
+>“-Can you understand me?”
+>“-我就是出去走走”
 
 第三日原想继续看李安先生的《喜宴》，但鉴于《推手》留给我的阴影，我还是决定看了中野量太先生的《滚烫的爱（湯を沸かすほどの熱い愛）》。原先以为日式家庭片都像是《如父如子》般的温情与温情背后的戳心，但不同于是枝裕和，中野导演的镜头去除掉让人如鲠在喉的不忍，直面死亡与重生，爱与包容，片子就像片中的幸野双叶母亲一样，给人莫大的爱与勇气。
 
