--- a/_articles/2021-02-05-写给付大侠之四日观影感.md
+++ b/_articles/2021-02-05-写给付大侠之四日观影感.md
@@ -3,57 +3,40 @@ title: "写给付大侠 四日观影感"
 date: 2021-02-05 20:07:00
 categories: Fu
 tags: mind
-layout: xinran
 ---
 
 ---
 
 <ul class="list-inline text-center">
 <audio controls="controls">
-    <source src="http://music.163.com/song/media/outer/url?id=533788692.mp3" type="audio/ogg">
-    <source src="http://music.163.com/song/media/outer/url?id=533788692.mp3" type="audio/mpeg">
-<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=533788692.mp3" />
+    <source src="http://music.163.com/song/media/outer/url?id=1463419806.mp3" type="audio/ogg">
+    <source src="http://music.163.com/song/media/outer/url?id=1463419806.mp3" type="audio/mpeg">
+<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=1463419806.mp3" />
 </audio>
 </ul>
 
 *一首好听的歌曲*
 
-Dear Frau Fu,
+今天是2021年2月5日，农历腊月廿四。
 
-最近在干什么呀？
+为了能够恢复与你的交流，在四日前开始了每天一部电影的计划。
 
-万青发新专了，告五人发新专了。
+第一日是李安先生的《饮食男女》。李安导演对于传统中式家庭在新潮流冲击下而衍生的台湾家庭关系有十分独特的视角。第一幕井井有条看似蒸蒸日上到最后一幕满目疮痍看似支离破碎，令人惊奇。
 
-贾老板退出了平遥，
+第二日是李安先生的《推手》。片子应该是好片子，但是我看了480P没有字幕的版本，其中一半以上的对话都是含糊不清的中式英文与嘶吼的争吵，实在让人费解。就像是片中洋媳妇与老爷子的对话一样，大抵也是李安导演与观众的交流。
 
-特朗普终于下台了，
+>“-Can you understand me?”
+>
+>“-我就是出去走走”
 
-整整一年半没怎么看书的我也只能写点垃圾话。
+第三日原想继续看李安先生的《喜宴》，但鉴于《推手》留给我的阴影，我还是决定看了中野量太先生的《滚烫的爱（湯を沸かすほどの熱い愛）》。原先以为日式家庭片都像是《如父如子》般的温情与温情背后的戳心，但不同于是枝裕和，中野导演的镜头去除掉让人如鲠在喉的不忍，直面死亡与重生，爱与包容，片子就像片中的幸野双叶母亲一样，给人莫大的爱与勇气。
 
-这半年我过得还算可以，没有十分焦虑抑郁的时刻，拿到了两所荷兰大学的offer｡
+今天是第四日，是彼得·威尔（Peter Weir）先生的《死亡诗社（*Dead Poets Society*）》，太好了，无权置评。
 
-对于以后仍没有丝毫头绪，
+> Most men lead lives of quiet desperation。
+>
+> (Thoreau)Don't be resigned to that. Break out! Don't just walk off the edge like lemmings。
 
-两周前分手。
+决定明天看一部某某女士导演的影片，为消除在电影行业中男女不平等的现象而努力。
 
-看了几部片子，没有十分满意的，就不推荐了。
-
-几部剧，想必你也已经看了，也不安利了。
-
-自己这半年拍的片子，水平堪忧，原想隐晦让高转发给你，但碍于作品实在拿不出手，就暂且算罢。
-
-其实中途几次想冲动联系你，但没什么正当理由，万青发新专全世界都知道，被Delft录取不算是什么多令人欣喜的事情，告五人也变成烂大街的乐团（但我还是十分喜爱。只能隐晦的告诉高，但总归这些都有人与你分享。
-
-今天下午喝了该死的咖啡，导致凌晨2:24仍十分清醒。躺在这张床上又想起同样难以入眠的那天看到你发的《一一》的海报而致的四个月鲜有间断的瞎聊。
-
-不知你最近怎样。偶尔从高口中会听得一些消息，仍会感到十分钦佩并自叹不如。你可能没有感知，对于你我十分自卑，因为你无论对影片的鉴赏、音乐的包容、摄影的角度、文笔、甚至与人交往的能力等等都是我难以企及的。更别说你真的十分好看。但这种自卑感追根还是源于对自己未来不确定性的担忧和害怕失去的强烈恐惧。而这些话我也全都告诉了高并隐晦地希望他能传达给你。
-
-最后还是选一张最喜爱的照片给你罢
-
-望新的一年一切顺利！也望收到你的回复！
-
-祝好，
-
-李珈毅
-
-*《白日梦》——红白色乐队*
+*《所以我想消失了》——小缪*
