--- a/_articles/2021-02-02-写给付大侠之求和邮件.md
+++ b/_articles/2021-02-02-写给付大侠之求和邮件.md
@@ -20,6 +20,8 @@ layout: xinran
 
 Dear Frau Fu,
 
+![blank](/assets/img/placeholder.png)
+
 最近在干什么呀？
 
 万青发新专了，告五人发新专了。
@@ -36,11 +38,15 @@ Dear Frau Fu,
 
 两周前分手。
 
+![blank](/assets/img/placeholder.png)
+
 看了几部片子，没有十分满意的，就不推荐了。
 
 几部剧，想必你也已经看了，也不安利了。
 
 自己这半年拍的片子，水平堪忧，原想隐晦让高转发给你，但碍于作品实在拿不出手，就暂且算罢。
+
+![blank](/assets/img/placeholder.png)
 
 其实中途几次想冲动联系你，但没什么正当理由，万青发新专全世界都知道，被Delft录取不算是什么多令人欣喜的事情，告五人也变成烂大街的乐团（但我还是十分喜爱。只能隐晦的告诉高，但总归这些都有人与你分享。
 
@@ -54,8 +60,14 @@ Dear Frau Fu,
 
 望新的一年一切顺利！也望收到你的回复！
 
+![blank](/assets/img/placeholder.png)
+
 祝好，
 
 李珈毅
 
+![blank](/assets/img/placeholder.png)
+
 *《白日梦》——红白色乐队*
+
+![blank](/assets/img/placeholder.png)
