--- a/_nonsenses/2021-03-07-我有多讨厌上海的雨.md
+++ b/_nonsenses/2021-03-07-我有多讨厌上海的雨.md
@@ -5,9 +5,18 @@ categories: nonsense
 position: nonsenses
 layout: xinran
 ---
-
 上海的雨很是讨厌，总是淅淅沥沥下个不停。
 ---
+
+<!-- <ul class="list-inline text-center">
+<audio controls="controls">
+    <source src="http://music.163.com/song/media/outer/url?id=1373002687.mp3" type="audio/ogg">
+    <source src="http://music.163.com/song/media/outer/url?id=1373002687.mp3" type="audio/mpeg">
+<embed height="50" width="1500" src="http://music.163.com/song/media/outer/url?id=1373002687.mp3" />
+</audio>
+</ul>
+
+*Twilight Rush(暮色狂奔）— 结冰水* -->
 
 ## 我有多讨厌上海的雨
 
