--- a/_nonsenses/2021-03-07-我有多讨厌上海的雨.md
+++ b/_nonsenses/2021-03-07-我有多讨厌上海的雨.md
@@ -43,3 +43,5 @@ layout: xinran
 最甚不过春雨，连绵不绝又好大喜功：“看到这柳芽了吗？我给的。看到这梧桐枝了吗？看到这樱花苞了吗？都是我给的！”人们也只能迫不得已得回应祂：“看到了！看到了！我看到枯草泛青，我看到老树新枝，我看到喜鹊挤上枝头，看到男孩背着美国队长的新书包跑进了学校，看到女孩洁白如脂的肌肤，看到阿婆拎了新鲜的青菜和猪五花，看到阿公躺在雨棚下的摇椅上，在寂静的车水马龙的午后。”
 
 上海的雨很是讨厌，着实很难让人讨厌起来。
+
+![blank](/assets/img/placeholder.png)
