fix grammar err 0307

--- a/_articles/2021-03-07-杂记-我有多讨厌上海的雨.md
+++ b/_articles/2021-03-07-杂记-我有多讨厌上海的雨.md
@@ -24,7 +24,7 @@ layout: xinran
 
 上海的雨很是令人讨厌，总是淅淅沥沥下个不停。
 
-呼和浩特很少会有如此延绵的小雨。儿时的呼市似乎更是从未下过雨。印象中的都是罕见的倾盆大雨。“倾盆”很是形象，既形容了雨大，又形容了雨急，古人不亏文学修养高，若是给我造词，定会说泄屎大雨，形容大雨如拉屎，哗啦啦直泻。上海的雨就令人讨厌了，呼市的雨是腹泻，一股屎尿俱下便没了后顾之忧，而这上海的雨却如同便秘：放个屁大家就得撑伞出门，以防冷不丁有屎点子落在头上。
+呼和浩特很少会有如此延绵的小雨。儿时的呼市似乎更是从未下过雨。印象中的都是罕见的倾盆大雨。“倾盆”很是形象，形容雨大而急，古人不亏文学修养高，若是给我造词，定会说泄屎大雨，形容大雨如拉屎，哗啦啦直泻。上海的雨就令人讨厌了，呼市的雨是腹泻，一股屎尿俱下便没了后顾之忧，而这上海的雨却如同便秘：放个屁大家就得撑伞出门，以防冷不丁有屎点子落在头上。
 
 若不是这便秘中有诗性般的美，上海人定会选择腹泻的呼市。
 
