--- a/_articles/2021-03-07-杂记-我有多讨厌上海的雨.md
+++ b/_articles/2021-03-07-杂记-我有多讨厌上海的雨.md
@@ -3,7 +3,7 @@ title: "杂记-我有多讨厌上海的雨"
 date: 2021-03-07 10:16:59
 categories: nonsense
 position: nonsenses
-layout: xinran
+layout: fu
 ---
 
 上海的雨很是讨厌，总是淅淅沥沥下个不停。
