--- a/_articles/2021-02-05-写给付大侠之四日观影感.md
+++ b/_articles/2021-02-05-写给付大侠之四日观影感.md
@@ -39,7 +39,7 @@ tags: mind
 
 ![blank](/assets/img/placeholder.png)
 
-今天是第四日，是彼得·威尔（Peter Weir）先生的《死亡诗社（*Dead Poets Society*）》，太好了，无权置评。
+今天是第四日，是彼得·威尔的《死亡诗社（*Dead Poets Society*）》，太好了，无权置评。
 
 > Most men lead lives of quiet desperation。
 >
