--- a/_nonsenses/2022-03-06-读博一日记之二零二二年三月六日.md
+++ b/_nonsenses/2022-03-06-读博一日记之二零二二年三月六日.md
@@ -3,7 +3,7 @@ title: "读博一日记：二零二二年三月六日"
 date: 2022-03-05 20:18:59
 categories: nonsense
 position: nonsenses
-layout: xinran
+layout: fu
 ---
 
 晚餐吃了一个橙子、一个苹果和一根雪糕。
