update first day

--- a/_articles/2022-03-31-第一天.md
+++ b/_articles/2022-03-31-第一天.md
@@ -24,57 +24,57 @@ layout: fu
 
 1. 土秃
 
-- 擦
-- 脱单了
-- 日
+    > 擦
+    > 脱单了
+    > 日
 
-- ？？？？？？？？？？
+    > ？？？？？？？？？？
 
 2. 显然
 
-- （落日飞车欧洲巡演）
+    > （落日飞车欧洲巡演）
 
-- 我给显然讲
-- 怎么样，要不要来巴黎看落日飞车
+    > 我给显然讲
+    > 怎么样，要不要来巴黎看落日飞车
 
-- 显然：怎么样，英国有五六场，为什么要去巴黎md
+    > 显然：怎么样，英国有五六场，为什么要去巴黎md
 
 
 3. 葡萄牛奶苹果派
 
-- 刚刚剪完头发，买了葡萄牛奶苹果派
+    > 刚刚剪完头发，买了葡萄牛奶苹果派
 
-- 葡萄牛奶苹果派
-- 看看
+    > 葡萄牛奶苹果派
+    > 看看
 
-（图 葡萄、火龙果和苹果派）
+    （图 葡萄、火龙果和苹果派）
 
-- 光看到葡萄了
+    > 光看到葡萄了
 
-（图 指向苹果派）
+    （图 指向苹果派）
 
-- 我以为
-- （葡萄牛奶苹果派）是个完整的东西
+    > 我以为
+    > （葡萄牛奶苹果派）是个完整的东西
 
 4. 可爱
 
-（视频 旅居姐姐的视频）
+    （视频 旅居姐姐的视频）
 
-- 旅居姐姐，可太可爱了哈哈哈哈，写的废话诗 
+    > 旅居姐姐，可太可爱了哈哈哈哈，写的废话诗 
 
-- 是的，好可爱
-- 我不要慌张的爱你，给你自由
+    > 是的，好可爱
+    > 我不要慌张的爱你，给你自由
 
-- 哈哈哈哈
+    > 哈哈哈哈
 
-- 你最近真的好荡漾
-- 喝点酒可爱的不得了
-- 烦人
+    > 你最近真的好荡漾
+    > 喝点酒可爱的不得了
+    > 烦人
 
-- 是的，大家都太可爱了
+    > 是的，大家都太可爱了
 
-- 你可爱就好
-- 别人也不是我女朋友
+    > 你可爱就好
+    > 别人也不是我女朋友
 
 
 ![blank](/assets/img/placeholder.png)
