update first day

--- a/_articles/2022-03-31-第一天.md
+++ b/_articles/2022-03-31-第一天.md
@@ -30,6 +30,8 @@ layout: fu
     >
     > 日
 
+    ![blank](/assets/img/placeholder.png)
+    
     > ？？？？？？？？？？
 
 2. 显然
@@ -40,7 +42,7 @@ layout: fu
     >
     > 怎么样，要不要来巴黎看落日飞车
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 显然：怎么样，英国有五六场，为什么要去巴黎md
 
@@ -50,6 +52,7 @@ layout: fu
 
     > 刚刚剪完头发，买了葡萄牛奶苹果派
 
+    ![blank](/assets/img/placeholder.png)
 
     > 葡萄牛奶苹果派
     >
@@ -61,11 +64,11 @@ layout: fu
 
     > 光看到葡萄了
 
-
+    ![blank](/assets/img/placeholder.png)
 
     （图 指向苹果派）
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 我以为
     > 
@@ -77,17 +80,17 @@ layout: fu
 
     > 旅居姐姐，可太可爱了哈哈哈哈，写的废话诗 
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 是的，好可爱
     > 
     > 我不要慌张的爱你，给你自由
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 哈哈哈哈
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 你最近真的好荡漾
     > 
@@ -95,11 +98,11 @@ layout: fu
     > 
     > 烦人
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 是的，大家都太可爱了
 
-
+    ![blank](/assets/img/placeholder.png)
 
     > 你可爱就好
     > 
