update first day

--- a/_articles/2022-03-31-第一天.md
+++ b/_articles/2022-03-31-第一天.md
@@ -31,7 +31,7 @@ layout: fu
     > 日
 
     ![blank](/assets/img/placeholder.png)
-    
+
     > ？？？？？？？？？？
 
 2. 显然
@@ -40,11 +40,11 @@ layout: fu
 
     > 我给显然讲
     >
-    > 怎么样，要不要来巴黎看落日飞车
+    > 怎么说，要不要来巴黎看落日飞车
 
     ![blank](/assets/img/placeholder.png)
 
-    > 显然：怎么样，英国有五六场，为什么要去巴黎md
+    > 显然：怎么说，英国有五六场，为什么要去巴黎md
 
 
 
@@ -64,11 +64,9 @@ layout: fu
 
     > 光看到葡萄了
 
-    ![blank](/assets/img/placeholder.png)
 
     （图 指向苹果派）
 
-    ![blank](/assets/img/placeholder.png)
 
     > 我以为
     > 
